--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = '4.6-12' %}
-
+{% set version = '4.6-14' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,14 +9,13 @@ package:
 source:
   fn: randomForest_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/randomForest_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/randomForest/randomForest_{{ version }}.tar.gz
-
-  sha256: 6e512f8f88a51c01a918360acba61f1f39432f6e690bc231b7864218558b83c4
+    - {{ cran_mirror }}/src/contrib/randomForest_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/randomForest/randomForest_{{ version }}.tar.gz
+  sha256: f4b88920419eb0a89d0bc5744af0416d92d112988702dc726882394128a8754d
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 0
   skip: true  # [win32]
   rpaths:
     - lib/R/lib/
@@ -25,29 +23,39 @@ build:
 
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('fortran') }}        # [unix]
-    - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ compiler('c') }}        # [not win]
+    - {{ compiler('fortran') }}  # [not win]
+    - {{native}}toolchain        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
 
 test:
   commands:
-    - $R -e "library('randomForest')"  # [not win]
+    - $R -e "library('randomForest')"           # [not win]
     - "\"%R%\" -e \"library('randomForest')\""  # [win]
 
 about:
   home: https://www.stat.berkeley.edu/~breiman/RandomForests/
-  license: GPL 2.0
-  summary: Classification and regression based on a forest of trees using random inputs.
-  license_family: GPL
+  license: GPL (>= 2)
+  summary: Classification and regression based on a forest of trees using random inputs, based
+    on Breiman (2001) <DOI:10.1023/A:1010933404324>.
+  license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - daler
+    - jdblischak
+    - cbrueffer
+    - dbast
